<resources>
	<string name="app_name">Управление доставкой (Привват)</string>

	<string name="cant_fetch_data_from_server">Can not fetch data from server</string>
	<string name="ok">Ok</string>
	<!-- Strings related to login -->
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="error_invalid_email">Некорректный e-mail</string>
	<string name="error_invalid_password">Слишком короткий пароль</string>
	<string name="error_incorrect_password">Неправильный пароль</string>
	<string name="error_field_required">Это поле объязательно</string>
	<string name="permission_rationale">
		"Contacts permissions are needed for providing email completions."
	</string>
	<string name="save">Сохранить</string>

	<!-- Strings related to menu -->
	<string name="action_clear_cache">Очистить кэш</string>

	<string name="menu_home">Главная</string>
	<string name="menu_delivery">Доставка</string>
	<string name="menu_receiving">Отгрузка</string>
	<string name="menu_payment">Оплата</string>
	<string name="title_activity_payment">Оплата</string>

	<!-- Strings related to delivery item -->
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="delivery_item_number_lbl">ТТН</string>
	<string name="delivery_item_amount_lbl">Сумма</string>
	<string name="delivery_item_client_lbl">Клиент</string>
	<string name="delivery_item_mobile_lbl">Мобильный</string>
	<string name="delivery_item_address_lbl">Адрес доставки</string>
	<string name="delivery_item_payed_lbl">Оплачено</string>
	<string name="delivery_item_btn_pay">Оплатить</string>
	<string name="delivery_item_delivered_lbl">Доставлено</string>
	<string name="delivery_item_btn_delivered">Доставлено</string>
	<string name="payment_activity_btn_pay">Оплатить</string>
	<string name="payment_client_lbl">Клиент</string>
	<string name="payment_amount_lbl">Сумма</string>
	<string name="payment_number_lbl">Номер</string>

    <!-- Strings related to receiving item -->
    <string name="receiving_item_number_lbl">ТТН</string>
    <string name="receiving_item_client_lbl">Клиент</string>
    <string name="receiving_item_mobile_lbl">Мобильный</string>
    <string name="receiving_item_address_lbl">Адрес</string>
    <string name="receiving_item_received_lbl">Отгружено</string>
    <string name="receiving_item_btn_received">Отгружено</string>

	<!-- Strings related to delivery item edit card-->
	<string name="lbl_edit_delivery_number">ТТН</string>
	<string name="lbl_edit_delivery_client">Клиент</string>
	<string name="lbl_edit_delivery_phone">Телефон</string>
	<string name="lbl_edit_delivery_address">Адрес</string>
	<string name="lbl_edit_delivery_amount">Сумма</string>
	<string name="lbl_edit_delivery_payed">Оплачено</string>

	<!-- Strings related to delivery item edit card-->
	<string name="lbl_edit_receiving_number">ТТН</string>
	<string name="lbl_edit_receiving_client">Клиент</string>
	<string name="lbl_edit_receiving_phone">Телефон</string>
	<string name="lbl_edit_receiving_address">Адрес</string>

	<!-- Private -->
	<string name="connect_device">З\'єднання з пристроєм ...</string>
	<string name="available_device">Доступні пристрої</string>
	<string name="scanning_device">Пошук пристроїв ...</string>
	<string name="cancel_dlg">Відміна</string>
	<string name="no_paired_devices_found">Не знайдені подключені пристрої</string>
	<string name="paired_device">Підключено</string>
	<string name="unpaired_device">Відключено</string>
	<string name="message_pinpad">Увімкніть пристрій \nабо виберіть зі списку новий</string>
	<string name="message_pinpad_new">Будь ласка підключіть пристрій введення</string>
	<string name="connect_device_error">Помилка з\'єднання</string>
	<string name="connect_device_success">З\'єднання встановлено</string>
	<string name="noname_device">Без імені</string>
	<string name="msg_bluetooth_is_not_supported">Bluetooth не підтримується на вашому пристрої</string>
	<string name="turn_on_bluetooth">Увімкніть блютуз</string>

	<string name="functionality_limited">Обмеження функціоналу</string>
	<string name="functionality_message">Доступ до даних про місцезнаходження пристрою не було надано, додаток не зможе виявити доступні блютуз пристрої.</string>
	<string name="grant_permission">Дозвольте доступ.</string>
	<string name="go_settings">Перейдіть в налаштування пристрою для надання доступу.</string>
	<string name="btnCancelText">Відміна</string>

	<string name="message_printer">Увімкніть принтер \nабо виберіть зі списку новий</string>
	<string name="message_printer_disconnected">Принтер відключений</string>
	<string name="message_printer_new">Будь ласка підключіть пристрій друку</string>
	<string name="print_receipt">Надрукувати</string>
	<string name="error_on_client">Не вдалося звернутися до сервісу. Перевірте підключення та повторіть спробу</string>
	<string name="receipt_not_received">Не вдалося отримати чек</string>

	<string name="start_pay">Оплатити</string>
	<string name="receipt">Чек</string>
	<string name="please_wait">Будь ласка зачекайте</string>
	<string name="msg_printing_receipt">Друк чека</string>
</resources>
