<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:checkableBehavior="single">
		<item
			android:id="@+id/nav_home"
			android:icon="@drawable/ic_menu_main"
			android:title="@string/menu_home"/>
		<item
			android:id="@+id/nav_delivery"
			android:icon="@drawable/ic_menu_delivery"
			android:title="@string/menu_delivery"/>
		<item
			android:id="@+id/nav_shipping"
			android:icon="@drawable/ic_menu_receiving"
			android:title="@string/menu_receiving"/>

	</group>

	<item android:title="">
		<menu>
			<item
				android:id="@+id/nav_share"
				android:icon="@drawable/ic_menu_share"
				android:title="Share"/>
			<item
				android:id="@+id/nav_send"
				android:icon="@drawable/ic_menu_send"
				android:title="Send"/>
		</menu>
	</item>

</menu>
